# mibot-discord

./: .gitignore  .replit  bot.py  memoria_bot.db  pyproject.toml  render.yaml  requirements.txt
cogs/: admin_cog.py  audio_cog.py  help_cog.py  ia_cog.py  logging_cog.py  operator_cog.py  profile_cog.py  stats_cog.py  tasks_cog.py  utility_cog.py
utils/: db_manager.py  helpers.py  views.py
