[tool.poetry]
name = "mibotdiscordgemini"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
discord-py = "^2.3.2"
google-generativeai = "^0.5.4"
python-dotenv = "^1.0.1"
Pillow = "^10.3.0"
elevenlabs = "^1.2.0"
unidecode = "^1.3.8"
PyNaCl = "^1.5.0"
Flask = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
